test_suite/alan-2022-examples/failing/003690_mutation.alan
source C51ya begin if 7 then relax function else relax end end
